--- a/Form1.resx
+++ b/Form1.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="logo.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABjMAAAYwCAYAAAA3UL39AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAA/7JJREFUeF7s3QecVNX5+P/v6//7fX/fWFBTTEw3vX0TjSmma3pPTFWjxhZNNLGX
+        wQAADsEBuJFr7QAA/7JJREFUeF7s3QecVNX5+P/v6//7fX/fWFBTTEw3vX0TjSmma3pPTFWjxhZNNLGX
         aCygsWDFhhUBKSKgIgJK7yDIwlKWDtt3WZbtfaec538PuxuXmWdmp9yZuXfmc16v98vk7Ll3bplyzn04
         5/kvEQEAAAAAAAAAAPAstRIAAAAAAAAAAMAr1EoAAAAAAAAAAACvUCsBAAAAAAAAAAC8Qq0EAAAAAAAA
         AADwCrUSAAAAAAAAAADAK9RKAAAAAAAAAAAAr1ArAQAAAAAAAAAAvEKtBAAAAAAAAAAA8Aq1EgAAAAAA
