--- a/Form1.resx
+++ b/Form1.resx
@@ -121,7 +121,7 @@
   <data name="logo.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABjMAAAYwCAYAAAA3UL39AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAA/7JJREFUeF7s3QecVNX5+P/v6//7fX/fWFBTTEw3vX0TjSmma3pPTFWjxhZNNLGX
+        vwAADr8BOAVTJAAA/7JJREFUeF7s3QecVNX5+P/v6//7fX/fWFBTTEw3vX0TjSmma3pPTFWjxhZNNLGX
         aCygsWDFhhUBKSKgIgJK7yDIwlKWDtt3WZbtfaec538PuxuXmWdmp9yZuXfmc16v98vk7Ll3bplyzn04
         5/kvEQEAAAAAAAAAAPAstRIAAAAAAAAAAMAr1EoAAAAAAAAAAACvUCsBAAAAAAAAAAC8Qq0EAAAAAAAA
         AADwCrUSAAAAAAAAAADAK9RKAAAAAAAAAAAAr1ArAQAAAAAAAAAAvEKtBAAAAAAAAAAA8Aq1EgAAAAAA
@@ -3502,39 +3502,38 @@
         AMAZ9P/7/5b6dMFQvaBqAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="iconpass.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALMSURBVGhD7ZnLbhNBEEW9Awn2PMRrgfIt7FAyntgLJD4A
-        Qni7h4DyARBYIyR2AcQHBD4lEmsea2x3W0rCUDW+HqGoQqo9Hk9F8pGuYpfbd25Nd9tJp7VgwQkh7fkr
-        7SystZ3/mji/m2R+UIgecy114W5nw1/GcHssPx1eosBvSfvUSP4/UVMH9PNzpxeu4e02SLLhCt91hAyJ
-        C9v0fLXjRku3HuVnWPw4db5DYz60Mz/C2H7SG92ETbNQEw8o2J9xsLDNSwsvHcnKhr9KYz+imYM0G63j
-        pWYoZoKXifN7SRbuoKyGGuG9tMcejc0Mb9hyOU3RxITEje6xB83q7+6T4UWU5wc18X6ynFCaGroRn8Y3
-        xL9DaT7wPqCL7vPG1uyJ4+BPL/4AYE/+9EO5foq1PaPZmFBu/grLNBq6c1+wFFZRqgzNSJc9afPvoFQ/
-        1MA3vih9S19HqTL8PTOeZb+LUv3QxfpFI5v5WZQqw15opI9S/RRLgISnM6Mu3yNZNHIMi0am5UQ1cnsz
-        P01fTm9IPycXaEwu/CC95kyIp4ebEE0bFGXaQjw9JmbikOjXmF+Ip0cysiDE0yOZWBDi6ZFMLAjx9Egm
-        FoR4eiQTC0I8PZKJBSGeHsnEghBPj2QSI/57vu2G99PHg/PLzwYX+PyrqAljY4R4eiSTKFETsCpJnX8o
-        jo0QrPRIJjHimYBVSTfrn5PGxghWeiSTGEnHOnyoJ42NEaz0SCZx8s9hVUJ75IU8Vi9Y6ZFMYsSHbbAq
-        4Zo0Nkaw0iOZxApWJdKYWMFKj2QSK1iVSGNiBSs9kkms/t3ws9joLNjpkUyi5fwON4B/QRTHrFWFeHok
-        EwtCPD2SiQUhnh7JxIIQT49kYkGIp0cysSDE0yOZWBDi6ZFMLAjx9Jg8oMvCd8TTw8eTklnDeol4enCI
-        vVUcIMum8xNlSFx4dWMtP4V4h2i1/gI+hxgMGubiKwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAsxJREFUaEPtmctuE0EQRb0DCfY8xGuB8i3sUDKe2AskPgBCeLuHgPIBEFgjJHYB
+        xAcEPiUSax5rbHdbSsJQNb4eoahCqj0eT0Xyka5il9t3bk1320mntWDBCSHt+SvtLKy1nf+aOL+bZH5Q
+        iB5zLXXhbmfDX8Zweyw/HV6iwG9J+9RI/j9RUwf083OnF67h7TZIsuEK33WEDIkL2/R8teNGS7ce5WdY
+        /Dh1vkNjPrQzP8LYftIb3YRNs1ATDyjYn3GwsM1LCy8dycqGv0pjP6KZgzQbreOlZihmgpeJ83tJFu6g
+        rIYa4b20xx6NzQxv2HI5TdHEhMSN7rEHzerv7pPhRZTnBzXxfrKcUJoauhGfxjfEv0NpPvA+oIvu88bW
+        7Inj4E8v/gBgT/70Q7l+irU9o9mYUG7+Css0GrpzX7AUVlGqDM1Ilz1p8++gVD/UwDe+KH1LX0epMvw9
+        M55lv4tS/dDF+kUjm/lZlCrDXmikj1L9FEuAhKczoy7fI1k0cgyLRqblRDVyezM/TV9Ob0g/JxdoTC78
+        IL3mTIinh5sQTRsUZdpCPD0mZuKQ6NeYX4inRzKyIMTTI5lYEOLpkUwsCPH0SCYWhHh6JBMLQjw9kokF
+        IZ4eycSCEE+PZBIj/nu+7Yb308eD88vPBhf4/KuoCWNjhHh6JJMoUROwKkmdfyiOjRCs9EgmMeKZgFVJ
+        N+ufk8bGCFZ6JJMYScc6fKgnjY0RrPRIJnHyz2FVQnvkhTxWL1jpkUxixIdtsCrhmjQ2RrDSI5nEClYl
+        0phYwUqPZBIrWJVIY2IFKz2SSaz+3fCz2Ogs2OmRTKLl/A43gH9BFMesVYV4eiQTC0I8PZKJBSGeHsnE
+        ghBPj2RiQYinRzKxIMTTI5lYEOLpkUwsCPH0mDygy8J3xNPDx5OSWcN6iXh6cIi9VRwgy6bzE2VIXHh1
+        Yy0/hXiHaLX+Aj6HGAwa5uIrAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJySURBVGhD7Zm9btRAFIVXSAQooOIVqJDgNVCQAlnvFIhi
-        G7QdBZGIZxDC0BDo8gz85CkQNNSU/CSkDg1C2bAzXina4d7NSUNuEmdizyzIn3S0q9hz7rE9M75JOi0t
-        LfUxGPizPW1Vz7i1TNuvmbG/p+Lv2r3lY3wOTp8tVD5apLAbFN4fJT6na0a3MSw9ReHP0N19KYU9SjRm
-        hcfCJh0h4ffFFwGbNPC0kYKdRFle3oJdXHgxVpnzx8tuqsLPwTYe2G2EQCeXMqMebONBhdf+DhKqzLg3
-        sI0HPYF1KUyI+D0B23hQ0R0pTIjYC7bxqPkCtmEbD9qBvklhgqTtF9jGY9rbSGECRIv4FWzj8c9vo+g8
-        T70T8VRM1qFyVymFqi47UbpcgF0aKMiLg8Gqieb+c9ikA+30ihTwcNkJh5+Jdnof7iorrQk6J/m0OQxe
-        jLyjcG/Dezu/7KYy9nNPu9d8bGZ/pWxp+Z9RD/wF2iqf0YL8TgtyV9xdahB779VwT7kmyp8ONqId5KNU
-        sFFRzX7hzyNGOHznxQIRpIx9ghjh8COVzKOIXnqIEU6Tc/44cW3ECIf7Fsk8juwEMcKhx/hLNm9etP5+
-        IkY4dAHvJfMo0vYdYoSjtBuI5jGUu3uIEc6N+/5ckp2I2+66/maaLY+v0kVsi4UaENXaWczH11G+HtSj
-        8iZta1YqWKu0HXV1OY+y9cJ3pcnpRDdoIzPjayjXDHcLf2mvvbBDKUSY7JAbuIWH/iLKNM+dpeFleho5
-        Bfh0MFBl0Vi7zF6wTUP3cXmFLqZPWqVAH+iT/636gz7dVMZt8c9wbJXU5zEY3tLSEkyn8weme3I8XwVw
-        xgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAnJJREFUaEPtmb1u1EAUhVdIBCig4hWokOA1UJACWe8UiGIbtB0FkYhnEMLQEOjy
+        DPzkKRA01JT8JKQODULZsDNeKdrh3s1JQ24SZ2LPLMifdLSr2HPusT0zvkk6LS0t9TEY+LM9bVXPuLVM
+        26+Zsb+n4u/aveVjfA5Ony1UPlqksBsU3h8lPqdrRrcxLD1F4c/Q3X0phT1KNGaFx8ImHSHh98UXAZs0
+        8LSRgp1EWV7egl1ceDFWmfPHy26qws/BNh7YbYRAJ5cyox5s40GF1/4OEqrMuDewjQc9gXUpTIj4PQHb
+        eFDRHSlMiNgLtvGo+QK2YRsP2oG+SWGCpO0X2MZj2ttIYQJEi/gVbOPxz2+j6DxPvRPxVEzWoXJXKYWq
+        LjtRulyAXRooyIuDwaqJ5v5z2KQD7fSKFPBw2QmHn4l2eh/uKiutCTon+bQ5DF6MvKNwb8N7O7/spjL2
+        c0+713xsZn+lbGn5n1EP/AXaKp/RgvxOC3JX3F1qEHvv1XBPuSbKnw42oh3ko1SwUVHNfuHPI0Y4fOfF
+        AhGkjH2CGOHwI5XMo4heeogRTpNz/jhxbcQIh/sWyTyO7AQxwqHH+Es2b160/n4iRjh0Ae8l8yjS9h1i
+        hKO0G4jmMZS7e4gRzo37/lySnYjb7rr+Zpotj6/SRWyLhRoQ1dpZzMfXUb4e1KPyJm1rVipYq7QddXU5
+        j7L1wnelyelEN2gjM+NrKNcMdwt/aa+9sEMpRJjskBu4hYf+Iso0z52l4WV6GjkF+HQwUGXRWLvMXrBN
+        Q/dxeYUupk9apUAf6JP/rfqDPt1Uxm3xz3BsldTnMRje0tISTKfzB6Z7cjxfBXDGAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
